--- a/testing.html
+++ b/testing.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     
-<div class="container">
 
 <header>
+   <div class="container">
     <h1>Website Title</h1>
     <p>Website slogan included here </p>
 
@@ -19,14 +19,18 @@
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Portfolio</a></li>
+            <li><a href="">FAQs</a></li>
+            <li><a href="">Links</a></li>
             <li><a href="">Contact Us</a></li>
+
 
         </ul>
     </nav>
+   </div>
 </header>
 
 <div class="content-area group">
-    
+    <div class="container">
     <nav class="ui-menu">
         <ul class="group">
             <li class="ui-home"><a href="#home">Home</a></li>
@@ -124,13 +128,12 @@
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Cumque in vel, enim inventore dolore dolorem debitis temporibus voluptatibus, ad voluptatum eius voluptas veritatis iste? Saepe ipsum sint beatae. Illo, quis.
         </p>
         </aside>
-
+    </div>
 </div>
 <footer>
     <p>&copy; 2024- This is the footer.</p>
 </footer>
 
-</div>
 
 
 </body>
